# Noita-YouAreTheMimic

./: CMakeLists.txt  README.md
YouAreTheMimic/: init.lua  mod.xml  mod_id.txt  workshop.xml  workshop_id.txt
YouAreTheMimic/data/YouAreTheMimic/: chaser.xml  perk_tweaks.lua  sprite.xml
